color contrast ratio fixed

--- a/src/sass/global/_mixins.scss
+++ b/src/sass/global/_mixins.scss
@@ -515,6 +515,7 @@ $desktop-width: 1142px;
         .carousel-lists .slick-arrow,
         .customers_list_slider .slick-arrow {
             @extend .secondry-light-bg;
+            color: $white;
         }
         section.customer-quote .slick-initialized .slick-arrow {
             &:before {
